big huge server startup stuff